# winvent

./: Cargo.toml  README.md  example-config.toml
.github/workflows/: build-and-deploy.yml
src/: cloudwatch.rs  config.rs  logging.rs  main.rs  service.rs
tests/: integration_tests.rs
